--- a/webapp/WEB-INF/templates/skin/plugins/hellokt/hello.html
+++ b/webapp/WEB-INF/templates/skin/plugins/hellokt/hello.html
@@ -1,8 +1,11 @@
 <@row>
-<div class="well jumbotron">
+<div class="well jumbotron" style="text-align: center">
     <h1>Hello <img src="images/skin/plugins/hellokt/kotlin.png" alt="Kotlin's logo" width="250" /> </h1>
     <p>
         This LUTECE plugin is written in <a href="https://kotlinlang.org/">Kotlin progamming language</a>
+        <br>
+        <br>
+        <i class="fa fa-github"></i> <small> <a href="https://github.com/lutece-platform/lutece-dev-plugin-hellokt">GitHub repository</a></small>
     </p>
 </div>
 </@row>
